2021-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* Contributing.md: Update unit test link to tinytest

2021-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Add Inaki to the team

2021-02-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* README.md: Mention the Rcpp drap repo and its release candidates in
	installation section

2021-01-30  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/test_global_rostream.R: Added test new (optionally)
	global Rcout and Rcerr objects

2021-01-28  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/iostream/Rstreambuf.h: Support for global
	Rcout/Rcerr by defining `-DRCPP_USE_GLOBAL_ROSTREAM`; this mimics
	std::cout/cerr; initialization code is automatically generated.
	* inst/include/Rcpp/routines.h: Ditto
	* src/api.cpp: Ditto
	* src/attributes.cpp: Ditto
	* src/rcpp_init.cpp: Ditto

2021-01-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/DataFrame.h: Remove unused variable

	* R/Attributes.R (sourceCpp): Support argument echo to be passed to
	source() to silence optional R evaluation

2021-01-19  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/include/RcppCommon.h: Preverse existing API and offer new
	token-based API alongside via Rcpp_Precious{Preserve,Release}
	* inst/include/Rcpp/String.h: Use Rcpp_Precious{Preserve,Release}
	* inst/include/Rcpp/storage/PreserveStorage.h: Ditto

2021-01-17  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/String.h: Use Rcpp_{Preserve,Release}Object
	throughout which connects to Rcpp_precious_* routines
	* inst/include/Rcpp/exceptions.h: Use Rcpp_ReleaseObject
	* inst/include/Rcpp/routines.h: Several corrections and refinements